--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -141,17 +141,21 @@ body {
 
 .sidebar .cookies {
     margin: 25px 20px;
+
 }
 
 .sidebar .cookies a {
     color: #b3b3b3;
     font-weight: 500;
-    font-size: 10px;
+    font-size: 9px;
     text-decoration: none;
+    line-height: 2.5em;
+    
 }
 
 .sidebar .cookies a:hover {
-    text-decoration: underline;
+    text-decoration: solid;
+    color: #1FDD65;
 }
 
 .languages .languages__button {
@@ -172,10 +176,11 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background: linear-gradient(to right, #ae2896, #509bf5);
+    background: linear-gradient(to right, #1FDD65, #242424);
     padding: 15px 40px;
     display: flex;
     justify-content: space-between;
+    font-weight: bold;
 }
 
 .anuncio-premium .text {
