--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -138,6 +138,21 @@ body {
     border: 0px;
     width: 113px;
 }
+.section-playlist__content .section-podcast__button {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    margin-top: 12px;
+    border: 0px;
+    width: 150px;
+}
 
 .sidebar .cookies .cookies__links a{
     color: var(--fc-offset);
